--- a/index.css
+++ b/index.css
@@ -1,11 +1,20 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 body {
+    display: grid;
+    grid-template-rows: 1fr auto 1fr;
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
 
 header {
     display: grid;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto;
     grid-template-columns: 1fr;
     justify-items: center;
     align-items: center;
@@ -29,73 +38,118 @@ h1{
 }
 
 main {
-    padding-top: 0;
+    padding-top: 3rem;
     background-color: black;
     color: white;
 }
 
 .posters {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     gap: 20px;
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 1000px;
 }
 
 .product-card{
-    background-color: #333;
-    padding: 20px;
-    border-radius: 8px;
+    background-color: #000;
+    padding-bottom: 20px;
     text-align: start;
+    grid-column: span 2;
 }
 
-.product-card-special {
-    background-color: #333;
-    padding: 20px;
-    border-radius: 8px;
-    text-align: start;
-    grid-column: span 1;
-    grid-row: span 2;
+.product-card h2, 
+.product-card p {
+    margin-bottom: 2rem;
 }
+.product-card-special {
+    background-color: white;
+    color: black;
+}
+.product-card-special p {
+    margin-right: 3rem;
+}
+
+#photographer, #pt {
+    text-align: start;
+    grid-column: span 3;
+    margin-bottom: 4rem;
+}
+#photographer h2,
+#photographer p,
+#photographer button,
+#pt h2,
+#pt p,
+#pt button {
+    margin-left: 1rem;
+}
+
+
 
 .product-card img {
-    width: 250px;
-    height: auto;
-    border-radius: 8px;
+    display: block;
+    max-width: 100%;
 }
 .product-card-special img {
-    width: 300px;
-    height: auto;
-    border-radius: 8px;
+    display: block;
+    max-width: 100%;
 }
 
 button {
     background-color: #e63946;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 8px 12px;
     cursor: pointer;
     border-radius: 5px;
+    margin-bottom: 1rem;
 }
 
 footer {
     background-color: #333;
     color: white;
-    padding: 20px;
 }
 
-.footer-nav,
-.footer-address,
-.footer-social {
-    text-align: center;
+.footer-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 1000px;
+    margin: 0 auto;
+    padding-top: 2rem;
+    text-align: left;
 }
 
-footer ul {
+.footer-container h3 {
+    margin-bottom: .5rem;
+    font-size: 1.2rem;
+    
+}
+
+.footer-container ul {
     list-style: none;
     padding: 0;
 }
 
-footer ul li {
-    display: inline-block;
-    margin: 0 10px;
+.footer-container ul li {
+    margin: 5px 0;
+}
+
+.footer-container a {
+    color: white;
+    text-decoration: none;
+}
+
+.footer-container address {
+    font-style: normal;
+}
+
+.footer-container img {
+    width: 24px;
+    height: auto;
+    margin: 5px;
+}
+
+.footer-social ul {
+    display: flex;
+    justify-content: start;
 }
